add auth to swagger, add some tslint rules
